--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
 <body>
 Hi! I'm Honey Mae C. Ladion <br> </br> 
-
+I'm 22 years old <br> </br>
+I live in Don Victoriano Chiongbian Misamis Occidental <br> </br>
+My motto is "EVERYTHING HAPPENS FOR A REASON" <br> </br>
 I hope I can learn more about in this class........
 </body>
 
